Plugin Name: HTML Email Templates
Author: Aaron Edwards (incsub)
http://premium.wpmudev.org/project/html-email-templates/

Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------
2.0.1 - 7/23/2014 - Umesh Kumar
----------------------------------------------------------------------
- fix: remove wpautop for html messages
- fix: mail not being site, if template is empty

2.0 - 5/31/2014 - Umesh Kumar
----------------------------------------------------------------------
- New: Site wise template selection option
- New: Added Templates and Instant Preview option
- Filters: Works for template with sidebar:
    htmlemail_sidebar_posts => List of posts to be displayed, 
    htmlemail_sidebar_title => Tile of sidebar

1.1 - 3/6/2014
----------------------------------------------------------------------
- Fix: Preserve other email headers

1.0 - 3/6/2013
----------------------------------------------------------------------
- Initial release