@@ -7,8 +7,9 @@ Change Log:
 ----------------------------------------------------------------------
 2.0.1 - 7/23/2014 - Umesh Kumar
 ----------------------------------------------------------------------
-- fix: remove wpautop for html messages
-- fix: mail not being site, if template is empty
+- Fix: remove wpautop for html messages
+- Fix: mail not being site, if template is empty
+- Fix: content being replace multiple times for some templates
 
 2.0 - 5/31/2014 - Umesh Kumar
 ----------------------------------------------------------------------
